--- a/EnchantingTamilnadu_2/CSS/Style.css
+++ b/EnchantingTamilnadu_2/CSS/Style.css
@@ -5,8 +5,8 @@
     font-family: 'Roboto', sans-serif;
 }
 
-h1.header1{
-    background-color: rgba(71,4,71);
+.header1{
+    background-color:#410a3c;
     color: white;
     padding-top: 30px;
     text-align: center;
@@ -14,48 +14,52 @@ h1.header1{
 }
 
 
-div.blockAlign {
+.touristPlaces {
     display: block;
-    margin: 75px auto ;
-    max-width: 90%;
+    margin: 60px auto ;
+    width: 90%;
     box-sizing: border-box;
-    align-items: center;
-    /* background-color: blue; */
+    align-items:center ;
+    padding-left: 50px;
+  
 }
 
-div.insideblock {
+.placeInfo{
     display: inline-block;
-    width: 30%;
-    margin: 20px 20px 20px 20px;
-    padding: 10px;
-    box-sizing: border-box;
-    /* background-color: bisque; */
+    display: inline-block;
+    width: 31%;
+    margin-right: 1.5%;
+    margin-top: 20px;
+   box-sizing: border-box;
+   margin-bottom: 50px;
+   
+   
 }
-img.image{
+.image{
     display: inline-block;
     width: 100%;
 }
-.textalign{
+.Description{
     font-size: 17px;
     font-weight: 370;
     padding-top: 30px;
     padding-bottom: 20px;
     letter-spacing: .6px;
 }
-h2{
+.FamousQuote{
     font-weight: 300;
     font-size: 32px;
     padding-top: 20px;
    
 }
-h3{
+.motoTitle{
     font-weight: 300;
     font-size: 70px;
     padding-top: 20px;
     text-align: center;
     color: #7A1655;
 }
-h5{
+.placeName{
     font-weight: 500;
     font-size: 20px;
     padding-top: 10px;
@@ -63,34 +67,44 @@ h5{
 }
 button{
    font-size: 18px;
-    width: 150;
+    width: 154;
     height: 50;
     color: white;
-    background-color: #7A1655;
+    border:none;
+    background-color: #7a1054;
     font-weight: 350;
  }
- p.alignment{
-    padding: 20px 125px 20px;
-    font-size: 28px;
+ .motodescription{
+    padding-top: 30px ;
+    padding-left: 27px;
+    padding-right: 27px;
+    font-size: 24px;
     font-family: 'Roboto', sans-serif;
-    font-weight: 250;
+    font-weight: 300;
+    text-align: justify;
     box-sizing: border-box;
     line-height: 50px;
  }
- div.fotter1{
-    background-color: #7A1655;
+ .footer1{
+    background-color: #7a1054;
     color: white;
     height: 100px;
-    padding-left: 125px;
+    padding-left: 137px;
     
     
  }
- #heading2{
+ #copyright{
     font-size: 20px;
     padding-top: 30px;
  }
- #para1{
+ #photosource{
     font-size: 18px;
+   
     font-weight: 300;
  }
-
+ .moto{
+     margin-top: 90px;
+     width: 75%;
+     margin-left: 230px;
+     margin-bottom: 60px;
+ }
