--- a/Exercise 7/CSS/index.css
+++ b/Exercise 7/CSS/index.css
@@ -6,10 +6,10 @@
 
 body {
     background-color: black;
-    font-family: 'Oswald', sans-serif;
+    font-family: 'Roboto', sans-serif;
 }
 
-.email {
+.header-mail {
     display: flex;
     flex-direction: row-reverse;
     margin-right: 7%;
@@ -17,8 +17,11 @@ body {
     font-size: 28px;
     color: white;
 }
-
-.shruthiBhatt-heading {
+.header-mail a{
+    text-decoration: none;
+    color: white;
+}
+.shruthibhatt-heading {
     margin-top: 115px;
     display: flex;
     justify-content: center;
@@ -31,7 +34,7 @@ body {
     font-weight: 100;
 }
 
-.subHeading {
+.sub-heading {
     display: flex;
     justify-content: center;
     font-size: 60px;
@@ -42,9 +45,8 @@ body {
     color: #4b90e2;
 }
 
-.imageContainer {
+.image-container {
     display: flex;
-    /* background-color: aquamarine; */
     flex-wrap: wrap;
     margin-top: 150px;
     gap: 30px;
@@ -57,7 +59,7 @@ body {
     width: 32%;
 }
 
-.brandNames {
+.brand-names {
     margin-top: 150px;
     display: flex;
     font-size: 60px;
@@ -65,7 +67,7 @@ body {
     justify-content: center;
 }
 
-.greenText {
+.green-text {
     color: lightgreen;
 }
 
@@ -78,7 +80,8 @@ body {
     margin-top: 90px;
 }
 
-.image1 {
+.image-brand {
+    
     height: 60px;
 }
 
@@ -135,36 +138,41 @@ body {
         width: 60%;
         border: solid white;  
     }
-@media only screen and (max-width: 480px) {
+@media only screen and (max-width: 576px) {
     .image {
-        width: 100%;
+        width: 95%;
+        margin-left: 2.5%;
+        margin-right: 2.5%;
     }
-    .heading{
-        font-size: 100px;
+    .shruthibhatt-heading{
+        font-size: 80px;
     }
-    .subHeading{
-        font-size: 50px;
+    .sub-heading{
+        font-size: 20px;
     }
-    .heading2{
+    .brand-names{
+        margin-top: 90px;
         font-size: 40px;
     }
-    .image1{
-        width:20%;
-        height: 100%;
+    .image-brand{
+        width:30%;
+        
     }
     .icon{
-        font-size: 14px;
+        font-size: 30px;
+        margin-top: 50px;
     }
     .round{
-    width: 28px;
-    height: 26px;
-    padding: 5px;
+        width: 57px;
+    height: 57px;
+    padding: 13px;
+    margin-left: 24px;
     }
-    .email{
+    .header-mail{
         position: absolute;
-        top:39%;
-        font-size: 20px;
-        left:90px
+        top:25%;
+        font-size: 15px;
+        left:200px
     }
     .line{
         display: flex;
@@ -177,22 +185,22 @@ body {
         display: flex;
         justify-content: space-around;
         width: 100%;
-        padding: 0 70px;
-        margin-top: 20%;
+        padding: 0 147px;
+        margin-top: 42%;
     }
     .small{
         height: 1px;
-        width: 20%;
+        width: 15%;
         border: solid white;
 
     }
     .big {
         height: 1px;
-        width: 60%;
+        width: 56%;
         border: solid white;  
     }
     .phrase{
-        font-size: 15px;
+        font-size: 28px;
         margin-bottom: 15%;
         margin-top: 50px;
     }
